# imguI_cmake

./: CMakeLists.txt  imgui.cpp  imgui.h  imgui_widgets.cpp
cmake/: Core.cmake  Dependencies.cmake  Install.cmake  LinkLibs.cmake
cmake/dependencies/: sdl2.cmake
docs/: CHANGELOG.txt
